--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -47,7 +47,8 @@ set -g @catppuccin_pane_border_style "fg=red"
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
 {{ if ne .chezmoi.hostname "bigone" }}
-set -g status-style "fg=#1e1e2e,bg=#cdd6f4"
+set -g status-style "bg=#5026a8"
+# set -g status-style "fg=#1e1e2e,bg=#5026a8"
 {{ end }}
 set -g status-right-length 100
 set -g status-left-length 0
