--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -6,7 +6,7 @@ if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 set -sg escape-time 10
 set -g status-position top
-set -g allow-passthrough all
+# set -g allow-passthrough all
 set -g default-terminal "tmux-256color"
 set -ag  terminal-features ",xterm-256color:RGB"
 # set -g terminal-features ',xterm-kitty:RGB'
