--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -10,8 +10,8 @@ set -g status-position top
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
-set -g default-terminal "tmux-256color"
-set -ag  terminal-features ",xterm-256color:RGB"
+set -g default-terminal "$TERM"
+set -ag  terminal-features ",$TERM:Tc"
 # set -g terminal-features ',xterm-kitty:RGB'
 set -g mouse on
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
