--- a/dot_config/alacritty/alacritty.toml.tmpl
+++ b/dot_config/alacritty/alacritty.toml.tmpl
@@ -15,7 +15,7 @@ offset.y = 1
 
 [font.bold]
 # family = "FiraCode Nerd Font Mono"
-family = "Sauce Code Pro Nerd Font"
+# family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Krypton"
 # family = "JetBrainsMono Nerd Font"
@@ -32,7 +32,7 @@ style = "Bold"
 
 [font.bold_italic]
 # family = "FiraCode Nerd Font Mono"
-family = "Sauce Code Pro Nerd Font"
+# family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Radon"
 # family = "JetBrainsMono Nerd Font"
@@ -46,7 +46,7 @@ style = "Bold Italic"
 
 [font.italic]
 # family = "FiraCode Nerd Font Mono"
-family = "Sauce Code Pro Nerd Font"
+# family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Radon"
 # family = "JetBrainsMono Nerd Font"
