--- a/dot_config/alacritty/alacritty.toml.tmpl
+++ b/dot_config/alacritty/alacritty.toml.tmpl
@@ -14,11 +14,11 @@ size = 12
 offset.y = 1
 
 [font.bold]
+family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Krypton"
-# family = "JetBrainsMono Nerd Font"
 # family = "Neon"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
@@ -31,11 +31,11 @@ offset.y = 1
 style = "Bold"
 
 [font.bold_italic]
+family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Radon"
-# family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
 # family = "Neon"
 # family = "Krypton"
@@ -45,11 +45,11 @@ style = "Bold"
 style = "Bold Italic"
 
 [font.italic]
+family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Radon"
-# family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
 # family = "Neon"
 # family = "Agave Nerd Font Mono"
@@ -58,11 +58,11 @@ style = "Bold Italic"
 style = "Italic"
 
 [font.normal]
+family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
 # family = "Neon"
-# family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
