--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -38,8 +38,10 @@ home_symbol = "🏠"
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
+{{ if eq .chezmoi.hostname "bigone" }}
 "ddt" = "🌟"
 "regioncounter" = "🩷"
+{{ end }}
 "briefe" = ""
 "Briefe" = ""
 
