--- a/dot_config/alacritty/alacritty.toml.tmpl
+++ b/dot_config/alacritty/alacritty.toml.tmpl
@@ -14,7 +14,7 @@ size = 12
 offset.y = 1
 
 [font.bold]
-family = "JetBrainsMono Nerd Font"
+# family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
@@ -31,7 +31,7 @@ family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrainsMono Nerd Font"
+# family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
@@ -45,7 +45,7 @@ family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrainsMono Nerd Font"
+# family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
@@ -58,7 +58,7 @@ family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
+# family = "JetBrainsMono Nerd Font"
 # family = "FiraCode Nerd Font Mono"
 # family = "Sauce Code Pro Nerd Font"
 # family = "Mono"
