--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -39,6 +39,7 @@ home_symbol = "🏠"
 "Music" = " "
 "Pictures" = " "
 {{ if eq .chezmoi.hostname "bigone" }}
+"ddtjm" = "✡️"
 "ddt" = "🌟"
 "regioncounter" = "🩷"
 {{ end }}
