--- a/dot_config/nvim/lua/plugins/main.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/main.lua.tmpl
@@ -146,7 +146,7 @@ return {
     end,
   },
   {
-    "echasnovski/mini.indentscope",
+    "nvim-mini/mini.indentscope",
     cond = no_weak_machine,
     keys = {
       {
@@ -164,7 +164,7 @@ return {
     end,
   },
   {
-    "echasnovski/mini.bufremove",
+    "nvim-mini/mini.bufremove",
     keys = {
       {
         "<leader>m",
