--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -6,8 +6,8 @@
 
 export KEYTIMEOUT=20
 export ZSH_DISABLE_COMPFIX=true
-export LC_ALL=en_US.UTF-8
-export LANG="C.UTF-8"
+# export LC_ALL=en_US.UTF-8
+# export LANG="C.UTF-8"
 fpath+=~/.zfunc
 
 {{ if eq .chezmoi.hostname "bigone" }}
