--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -173,6 +173,20 @@ end
 
 fish_vi_key_bindings
 
+# Start in insert mode
+function fish_default_mode_prompt; end
+function fish_mode_prompt; end
+set -g fish_vi_force_cursor 1
+set -g fish_cursor_default block
+set -g fish_cursor_insert line
+set -g fish_cursor_replace_one underscore
+set -g fish_cursor_visual block
+
+# Make sure we start in insert mode
+function fish_user_key_bindings
+    fish_vi_key_bindings insert
+end
+
 bind -M insert \ck kill-line
 bind -M default \ck kill-line
 
