sudo starship module causes trouble disabled it

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -7,7 +7,6 @@ $git_state\
 $git_status\
 $git_metrics\
 $container\
-$sudo\
 $typst\
 $rust\
 $cmd_duration\
@@ -16,6 +15,8 @@ $jobs\
 $line_break\
 $python\
 $character"""
+
+# $sudo\
 
 [status]
 # style = 'bg:blue'
@@ -104,4 +105,4 @@ format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 [sudo]
 style = 'bold green'
 symbol = '👩‍💻 '
-disabled = false
+disabled = true
