--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -40,8 +40,8 @@ home_symbol = "🏠"
 "Music" = " "
 "Pictures" = " "
 {{ if eq .chezmoi.hostname "bigone" }}
-"ddtjm" = "✡️"
-"ddt" = "🌟"
+# "ddtjm" = "✡️"
+# "ddt" = "🌟"
 "regioncounter" = "🩷"
 {{ end }}
 "briefe" = ""
