zellij ctrl+space is already taken, so use # instead

--- a/dot_config/zellij/config.kdl.tmpl
+++ b/dot_config/zellij/config.kdl.tmpl
@@ -3,7 +3,7 @@ keybinds clear-defaults=true {
     // unbind "Ctrl n"
     unbind "Ctrl h"
     locked {
-        bind "Ctrl Space" { SwitchToMode "normal"; }
+        bind "Ctrl #" { SwitchToMode "normal"; }
     }
     pane {
         bind "left" { MovePane "left"; }
@@ -150,7 +150,7 @@ keybinds clear-defaults=true {
         bind "Alt ]" { NextSwapLayout; }
         bind "Alt f" { ToggleFloatingPanes; }
         bind "Alt d" { ToggleFocusFullscreen; SwitchToMode "normal"; }
-        bind "Ctrl Space" { SwitchToMode "locked"; }
+        bind "Ctrl #" { SwitchToMode "locked"; }
         bind "Alt i" { MoveTab "left"; }
         bind "Alt n" { NewPane; }
         bind "Alt o" { MoveTab "right"; }
