--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -198,7 +198,7 @@ fi
 if command -v atuin &>/dev/null; then
   eval "$(atuin init zsh --disable-up-arrow)"
 fi
-if [ -f "$HOME/.cargo/env" ]; then
+if [[ -f "$HOME/.cargo/env" ]]; then
   . "$HOME/.cargo/env"
 fi
 if command -v starship &>/dev/null; then
