--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -106,3 +106,8 @@ format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 style = 'bold green'
 symbol = '👩‍💻 '
 disabled = true
+
+[jobs]
+symbol = '⚙ '
+style = 'bold yellow'
+format = '[$symbol $number]($style) '
