Zellij session name too long

--- a/dot_config/zellij/config.kdl.tmpl
+++ b/dot_config/zellij/config.kdl.tmpl
@@ -398,7 +398,7 @@ pane_frames false
 // Default: <RANDOM>
 // 
 {{ if eq .chezmoi.hostname "bigone" }}
-session_name "Du schaffst das!"
+session_name "Daheim!"
 {{ else }}
 session_name "go"
 {{ end }}
